# surfer_girl

./: .CMakeLists.txt.swp  .data_format.hpp.swp  .duck_dive.cpp.swp  .linkdef.h.swp  .modifier.hpp.swp  .policy.hpp.swp  .reader.hpp.swp  .rootlogon.C.swp  .surfer_girl.cpp.swp  .utilities.hpp.swp  .writer.hpp.swp  CMakeLists.txt  LICENSE  README.md  apply_cut.sh  calibration.cpp  calibration_tools.hpp  calibrator.cpp  data_format.hpp  data_stream.hpp  data_structure.hpp  energy_loss.cpp  energy_resolution.cpp  fit_tools.hpp  fitter.hpp  flag_set.hpp  formulae.hpp  generate_response_matrix.cpp  linkdef.h  modifier.hpp  policy.hpp  process_directory.sh  process_file.sh  process_spectra.hpp  reader.hpp  reprocess_waveform.hpp  rootlogon.C  specifier.hpp  spectra_comparison.hpp  surfer_boy.hpp  (+8 more)
data/: p_air.txt  p_aluminum.txt  p_glass.txt  p_teflon.txt
